tests/fail/semantic/unknown_type_atom_field.cyt
atom Test(x: int, y: huh)

// args: --no-colour

// expected stderr:
// error: unknown type `huh`
//   ┌─ ../tests/fail/semantic/unknown_type_atom_field.cyt:1:22
//   │
// 1 │ atom Test(x: int, y: huh)
//   │                      ^^^ unknown type